[workspace]

members = [
    "crypto/crypto",
    "crypto/crypto-derive",
    "storage/jellyfish-merkle",
    "types",
]

# NOTE: These members should never include crates that require fuzzing
# features or test features. These are the crates we want built with no extra
# test-only code included.
default-members = [
    "storage/jellyfish-merkle",
]

[profile.release]
debug = true
lto = 'thin'

[profile.bench]
debug = true
