[workspace]

members = [
    "crypto/crypto",
    "crypto/crypto-derive",
    "storage/jellyfish-merkle",
    "types",
]

# NOTE: default-members is the complete list of binaries that form the "production Libra codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    "storage/jellyfish-merkle",
]

[profile.release]
debug = true
lto = 'thin'

[profile.bench]
debug = true
