[package]
name = "libra-types"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra types"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
mirai-annotations = "1.5.0"
proptest = { version = "0.9.4", default-features = false, optional = true }
proptest-derive = { version = "0.1.2", default-features = false, optional = true }
serde = { version = "1.0.106", default-features = false }

libra-crypto = { path = "../crypto/crypto", version = "0.1.0" }
libra-crypto-derive = { path = "../crypto/crypto-derive", version = "0.1.0" }
libra-proptest-helpers = { path = "../common/proptest-helpers", version = "0.1.0", optional = true }

[dev-dependencies]
regex = "1.3.6"
proptest = "0.9.4"
proptest-derive = "0.1.2"
libra-proptest-helpers = { path = "../common/proptest-helpers", version = "0.1.0" }
libra-prost-ext = { path = "../common/prost-ext", version = "0.1.0" }

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "libra-proptest-helpers", "libra-crypto/fuzzing"]
