[package]
name = "libra-crypto"
version = "0.1.0"
authors = ["Libra Association <opensource@libra.org>"]
description = "Libra libra-crypto"
repository = "https://github.com/libra/libra"
homepage = "https://libra.org"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.31"
bytes = "0.5.4"
digest = "0.8.1"
hex = "0.4.2"
hmac = "0.7.1"
once_cell = "1.4.0"
mirai-annotations = "1.8.0"
proptest = { version = "0.10.0", optional = true }
proptest-derive = { version = "0.2.0", optional = true }
rand = "0.7.3"
serde = { version = "1.0.111", features = ["derive"] }
serde-name = "0.1.0"
sha2 = "0.8.2"
static_assertions = { version = "1.1.0", optional = true }
thiserror = "1.0"
blake3 = "0.3"

libra-crypto-derive = { path = "../crypto-derive", version = "0.1.0" }
libra-nibble = { path = "../../common/nibble", version = "0.1.0" }
libra-workspace-hack = { path = "../../common/workspace-hack", version = "0.1.0" }

[dev-dependencies]
bitvec = "0.17.4"
byteorder = "1.3.4"
proptest = "0.10.0"
proptest-derive = "0.2.0"
ripemd160 = "0.8.0"
criterion = "0.3.2"
sha3 = "0.8.2"
serde_json = "1.0.54"

[features]
default = ["std", "fiat_u64_backend"]
assert-private-keys-not-cloneable = ["static_assertions"]
cloneable-private-keys = []
fuzzing = ["proptest", "proptest-derive", "cloneable-private-keys"]
batch = []
std = []
u64_backend = []
fiat_u64_backend = []

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "noise"
harness = false
